@@ -100,6 +100,15 @@
         permission="zope2.View"
         />
 
+    <!-- Conversation view -->
+    <browser:page
+        name="conversation_view"
+        for="Products.CMFCore.interfaces.IContentish"
+        layer="..interfaces.IDiscussionLayer"
+        class=".conversation.ConversationView"
+        permission="zope2.View"
+        />
+
     <!-- Comment view -->
     <browser:view
         name="view"
